<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.yangxulei.contentproviderprac.MainActivity" android:orientation="vertical">

    <EditText
            android:id="@+id/editText_student"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_student"
    />

    <EditText
            android:id="@+id/editText_information"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:hint="@string/hint_information"
    />

    <Button
            android:id="@+id/button_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert"
    />

    <EditText
            android:id="@+id/editText_keyword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_keyword"
    />

    <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
    />

    <ListView
            android:id="@+id/listView_result"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
    />
</LinearLayout>
